server/public/assets/styles/sass/main.scss
//reset browser defaults using Normalize.css
@import "imports/normalize";

//imports colors
@import "imports/config";

//import mixins
@import "imports/mixins";
@import "imports/responsive";

//import basic 12-column grid and defualt tag settings
@import "imports/grid";
@import "imports/type";

//use Font Awesome for icons
@import "imports/icons";

//defualt button styling to be seperated out later

$buttonColor: $green;
$buttonDark: darken($green, 10%);
$buttonDarker: darken($buttonDark, 10%);

button{
  background: $green;
  border-radius: 0 4px 4px 4px;
  border: 1px solid $brown;
  color: white;
  -webkit-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  font-size: 17px;
  padding: 10px 1%;
  display: inline-block;
  outline: 0;
  &:hover {
    background: $buttonDark;
  }
  &:active {
    background: $buttonDarker;
    position: relative;
    left: 2px;
    top: 2px;
  }
}

.button {
  @extend button;
  display: block;
  float: left;
  border: 0;
  &:active {
    left: 0;
    top: 0;
  }
}

body {
  text-align: center;
}

//index styling

.banner {
  margin-bottom: 20px;
  margin-left: 0;
  -webkit-box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.75);
}
.header {
  background-color: $orangebackground;
  border-bottom: 1px solid $brown;
}
.logo {
  display: block;
  float: left;
  padding-top: 10px;
  img {
    margin: 0 auto;
  }
}
.title {
  display: inline-block;
  padding-top: 30px;
}
.logout {
  text-align: left;
  p {
    display: inline-block;
    // float: left;
  }
  a {
    display: inline-block;;
  }
}

.nav {
  margin-bottom: 20px;
  a {
    text-decoration: none;
    width: (100% / 3 - 2%);
    border-radius: 0;
    margin: 0;
    box-shadow: none;
    opacity: 0.95;
    border-bottom: 1px solid $brown;
  }
}
img.bg {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;

  /* Set up proportionate scaling */
  width: 100%;
  height: auto;

  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
  z-index: -100;
}

@media screen and (max-width: 1024px) { /* Specific to this particular image */
  img.bg {
    left: 50%;
    margin-left: -512px;   /* 50% */
  }
}

//login styling to be seperated out later

.container {
  border: 1px solid $brown;
  margin: 20px auto;
  background-color: $whitebackground;
  border-radius: 0 8px 8px 8px;
  -webkit-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  button {
    margin-top: 10px;
    margin-bottom: 20px;
  }
}

.login {
  text-align: center;
}

//dashboard styling

.header {
  h4 {
    display: inline;
    // float: left;
  }
}
.event-content li {
  display: inline-block;
}

//request styling
select {
  font-size: 18px;
  width: 24%;
  margin: 10px 4%;
}
.add-salad {
  margin: 0 37%;
}
.btn-holder {
  margin: 20px auto;
}
ul {
  list-style-type: none;
}
li {
  display: block;
  float: left;
  width: 24%;
  margin: 0 4%;
}
.message {
  height: 100px;
  overflow: scroll;
  width: 52%;
  margin: 10px 4%;
  border: 1px solid $brown;
  border-radius: 0 8px 8px 8px;
  -webkit-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
  box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.75);
}
.send-request {
  height: 80px;
  width: 24%;
  margin: 10px 4%;
}

//salads styles
ul {
  list-style-type: none;
}
li {
  display: block;
  float: left;
  width: 24%;
  margin: 0 4%;
}

//farmResponse styles
.event-split {
  width: 42.5%;
  margin: 0 5%;
}
ul {
  list-style-type: none;
}
li {
  display: block;
  float: left;
  width: 24%;
  margin: 0 4%;
}

